force-app/main/default/objects/SPEN_CategoryDesignInformation__c/SPEN_CategoryDesignInformation__c.object-meta.xml
<CustomObject>
    <label>Category Design Information</label>
    <nameField>
        <displayFormat>CDI-{00000}</displayFormat>
        <label>Category Design Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Design Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>