force-app/main/default/objects/SPEN_CategoryDesignInformation__c/fields/SPEN_DesignInformationTemplate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignInformationTemplate__c</fullName>
    <label>Design Information Template</label>
    <referenceTo>SPEN_DesignInformationTemplate__c</referenceTo>
    <relationshipLabel>Category Design Informations</relationshipLabel>
    <relationshipName>Category_Design_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>