force-app/main/default/objects/SPEN_CategoryDesignInformation__c/fields/SPEN_WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkCategory__c</fullName>
    <label>Work Category</label>
    <referenceTo>SPEN_WorkCategory__c</referenceTo>
    <relationshipLabel>Category Design Informations</relationshipLabel>
    <relationshipName>Category_Design_Informations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>